Streamline server config variables

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,29 @@
+# Integer values of Python loggin levels are as follows (default is WARNING):
+# CRITICAL = 50
+# ERROR = 40
+# WARNING = 30
+# INFO = 20
+# DEBUG = 10
+# NOTSET = 0
 #------------------------------------------------------------------------------
 # Docker
 #------------------------------------------------------------------------------
 # HTTP Proxies
-HTTP_PROXY=
-HTTPS_PROXY=
-http_proxy=
-https_proxy=
-
-#------------------------------------------------------------------------------
-# Container - all
-#------------------------------------------------------------------------------
-LOG_DIR="."
+export BBS_HTTP_PROXY=
+export BBS_HTTPS_PROXY=
+export BBS_http_proxy=
+export BBS_https_proxy=
 
 #------------------------------------------------------------------------------
 # Container - search
 #------------------------------------------------------------------------------
-SEARCH_DEBUG=
-SEARCH_LOG_FILE=
+export BBS_SEARCH_LOG_LEVEL="20"
+export BBS_SEARCH_LOG_FILE=
 
-SEARCH_MODELS_PATH=
-SEARCH_EMBEDDINGS_PATH=
-SEARCH_MODELS=
+export BBS_SEARCH_MODELS_PATH=
+export BBS_SEARCH_EMBEDDINGS_PATH=
+export BBS_SEARCH_MODELS="BSV,SBioBERT"
 
-SEARCH_MYSQL_URL=
-SEARCH_MYSQL_USER=
-SEARCH_MYSQL_PASSWORD=
+export BBS_SEARCH_MYSQL_URL=
+export BBS_SEARCH_MYSQL_USER=
+export BBS_SEARCH_MYSQL_PASSWORD=
