--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ faiss-cpu==1.6.3
 flake8==3.8.3
 frozendict==1.2
 git+https://github.com/allenai/scibert
-git+https://github.com/BlueBrain/nexus-forge
+git+https://github.com/BlueBrain/nexus-forge#egg=nexusforge
 gunicorn==20.0.4
 h5py==2.10.0
 hjson==3.0.1
