Update the search docker file

--- a/docker/Dockerfile-search_server
+++ b/docker/Dockerfile-search_server
@@ -46,8 +46,8 @@ ENV MODELS_PATH="/raid/sync/proj115/bbs_data/trained_models"
 ENV EMBEDDINGS_PATH="/raid/sync/proj115/bbs_data/cord19_v35/embeddings/embeddings_bsv_full.h5"
 ENV DATABASE_URI="dgx1.bbp.epfl.ch:8853/cord19_v35"
 ENV LOG_DIR="/raid/projects/bbs/logs"
-ENV LOG_NAME="bbs_search.log"
-ENV MODELS="BSV,SBioBERT"
+ENV LOG_NAME="bbs_search_torch_sim.log"
+ENV MODELS="BSV"
 
 ENTRYPOINT exec search_server \
     --host=0.0.0.0 \
