Rename deprecated command in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ envlist =
 [testenv]
 download = true
 extras = dev
-whitelist_externals = docker
+allowlist_externals = docker
 commands =
     python -m nltk.downloader stopwords punkt
     pytest {posargs:tests}
@@ -50,7 +50,7 @@ extras = dev
 commands =
     make doctest
     make html SPHINXOPTS=-W
-whitelist_externals = make
+allowlist_externals = make
 
 [testenv:check-packaging]
 deps =
@@ -64,7 +64,7 @@ commands =
 download = true
 extras = dev
 deps = pygal
-whitelist_externals = echo
+allowlist_externals = echo
 passenv =
     EMBEDDING_SERVER
     MINING_SERVER
