--- a/.env.example
+++ b/.env.example
@@ -9,21 +9,43 @@
 # Docker
 #------------------------------------------------------------------------------
 # HTTP Proxies
-export BBS_HTTP_PROXY=
-export BBS_HTTPS_PROXY=
-export BBS_http_proxy=
-export BBS_https_proxy=
+BBS_HTTP_PROXY=
+BBS_HTTPS_PROXY=
+BBS_http_proxy=
+BBS_https_proxy=
 
 #------------------------------------------------------------------------------
 # Container - search
 #------------------------------------------------------------------------------
-export BBS_SEARCH_LOG_LEVEL="20"
-export BBS_SEARCH_LOG_FILE=
+BBS_SEARCH_LOG_LEVEL=20
+BBS_SEARCH_LOG_FILE=bbs_search.log
 
-export BBS_SEARCH_MODELS_PATH=
-export BBS_SEARCH_EMBEDDINGS_PATH=
-export BBS_SEARCH_MODELS="BSV,SBioBERT"
+BBS_SEARCH_MODELS_PATH=./trained_models
+BBS_SEARCH_EMBEDDINGS_PATH=assets/embeddings.h5
+BBS_SEARCH_MODELS=BSV,SBioBERT
 
-export BBS_SEARCH_MYSQL_URL=
-export BBS_SEARCH_MYSQL_USER=
-export BBS_SEARCH_MYSQL_PASSWORD=
+BBS_SEARCH_MYSQL_URL=<host>:<port>/<database>
+BBS_SEARCH_MYSQL_USER=guest
+BBS_SEARCH_MYSQL_PASSWORD=guest
+
+#------------------------------------------------------------------------------
+# Container - embedding
+#------------------------------------------------------------------------------
+BBS_EMBEDDING_LOG_LEVEL=20
+BBS_EMBEDDING_LOG_FILE=bbs_embedding.log
+
+BBS_EMBEDDING_BSV_CHECKPOINT_PATH=assets/BioSentVec_PubMed_MIMICIII-bigram_d700.bin
+
+#------------------------------------------------------------------------------
+# Container - mining
+#------------------------------------------------------------------------------
+BBS_MINING_LOG_LEVEL=20
+BBS_MINING_LOG_FILE=bbs_mining.log
+
+BBS_MINING_EE_MODEL_LIBRARY=assets/ee_models_library.csv
+BBS_MINING_DB_TYPE=mysql
+
+BBS_MINING_SQLITE_DB_PATH=database.db
+BBS_MINING_MYSQL_URL=<host>:<port>/<database>
+BBS_MINING_MYSQL_USER=guest
+BBS_MINING_MYSQL_PASSWORD=guest
