--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ cryptography==3.0
 dash-cytoscape==0.0.5
 dash-table==4.6.2
 docker==4.2.2
+dvc[ssh]==1.6.6
 flake8==3.8.3
-dvc==1.6.6
 git+https://github.com/allenai/scibert
 h5py==2.10.0
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
