--- a/data_and_models/annotations/ner/.gitignore
+++ b/data_and_models/annotations/ner/.gitignore
@@ -11,3 +11,5 @@
 /annotations7_EmmanuelleLogette_2020-07-06_raw1_9EntityTypes.jsonl
 /annotations8_EmmanuelleLogette_2020-07-08_raw5_9EntityTypes.jsonl
 /annotations9_EmmanuelleLogette_2020-07-08_raw6_CelltypeProtein.jsonl
+/annotations14_EmmanuelleLogette_2020-09-02_raw8_CellCompartmentDrugOrgan.jsonl
+/annotations15_EmmanuelleLogette_2020-09-22_raw9_Pathway.jsonl
