Add raw_sentences n 7 8 9 and pathway_patterns

--- a/data_and_models/raw_sentences/.gitignore
+++ b/data_and_models/raw_sentences/.gitignore
@@ -4,3 +4,6 @@
 /raw4_2020-07-02_cord19_ChemicalOrganism.jsonl
 /raw5_2020-07-08_cord19_Drug_TestSet.jsonl
 /raw6_2020-07-08_cord19_CelltypeProtein.jsonl
+/raw7_2020-09-01_cord19v35_CellCompartment.jsonl
+/raw8_2020-09-02_cord19v35_CellCompartmentDrugOrgan.jsonl
+/raw9_2020-09-02_cord19v35_Pathway.jsonl
