--- a/data_and_models/pipelines/ner/dvc.yaml
+++ b/data_and_models/pipelines/ner/dvc.yaml
@@ -1,10 +1,51 @@
 stages:
-  model4_craft_annotations6:
-    cmd: python eval.py --annotations_file ../../annotations/ner/annotations1_EmmanuelleLogette_2020-06-19_raw1_8FirstLabels.jsonl
-      --model model4_craft_annotations6/ --stage_name model4_craft_annotations6
+  train_model1:
+    cmd: python train.py --annotation_files ../../annotations/ner/annotations5_EmmanuelleLogette_2020-06-30_raw2_Disease.jsonl
+      --output_dir ../../models/ner/model1 --model_name model1
     deps:
-    - ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl
+    - ../../annotations/ner/annotations5_EmmanuelleLogette_2020-06-30_raw2_Disease.jsonl
+    - train.py
     params:
-    - model4_craft_annotations6.etypes
+    - train.model1
     outs:
-    - ../../metrics/ner/model4_craft_annotations6_metrics.json
+    - ../../models/ner/model1
+  train_model2:
+    cmd: python train.py --annotation_files ../../annotations/ner/annotations14_EmmanuelleLogette_2020-09-02_raw8_CellCompartmentDrugOrgan.jsonl
+      --output_dir ../../models/ner/model2 --model_name model2
+    deps:
+    - ../../annotations/ner/annotations14_EmmanuelleLogette_2020-09-02_raw8_CellCompartmentDrugOrgan.jsonl
+    - train.py
+    params:
+    - train.model2
+    outs:
+    - ../../models/ner/model2
+  train_model3:
+    cmd: python train.py --annotation_files ../../annotations/ner/annotations6_EmmanuelleLogette_2020-07-07_raw4_TaxonChebi.jsonl
+      --output_dir ../../models/ner/model3 --model_name model3
+    deps:
+    - ../../annotations/ner/annotations6_EmmanuelleLogette_2020-07-07_raw4_TaxonChebi.jsonl
+    - train.py
+    params:
+    - train.model3
+    outs:
+    - ../../models/ner/model3
+  train_model4:
+    cmd: python train.py --annotation_files ../../annotations/ner/annotations9_EmmanuelleLogette_2020-07-08_raw6_CelltypeProtein.jsonl
+      --output_dir ../../models/ner/model4 --model_name model4
+    deps:
+    - ../../annotations/ner/annotations9_EmmanuelleLogette_2020-07-08_raw6_CelltypeProtein.jsonl
+    - train.py
+    params:
+    - train.model4
+    outs:
+    - ../../models/ner/model4
+  train_model5:
+    cmd: python train.py --annotation_files ../../annotations/ner/annotations15_EmmanuelleLogette_2020-09-22_raw9_Pathway.jsonl
+      --output_dir ../../models/ner/model5 --model_name model5
+    deps:
+    - ../../annotations/ner/annotations15_EmmanuelleLogette_2020-09-22_raw9_Pathway.jsonl
+    - train.py
+    params:
+    - train.model5
+    outs:
+    - ../../models/ner/model5
