--- a/data_and_models/Dockerfile-dvc
+++ b/data_and_models/Dockerfile-dvc
@@ -1,9 +1,9 @@
 FROM continuumio/miniconda3
 
-# ENV HTTP_PROXY='http://bbpproxy.epfl.ch:80/'
-# ENV HTTPS_PROXY='http://bbpproxy.epfl.ch:80/'
-# ENV http_proxy='http://bbpproxy.epfl.ch:80/'
-# ENV https_proxy='http://bbpproxy.epfl.ch:80/'
+ENV HTTP_PROXY='http://bbpproxy.epfl.ch:80/'
+ENV HTTPS_PROXY='http://bbpproxy.epfl.ch:80/'
+ENV http_proxy='http://bbpproxy.epfl.ch:80/'
+ENV https_proxy='http://bbpproxy.epfl.ch:80/'
 
 # Update conda, install additional system packages
 RUN true \
@@ -22,18 +22,17 @@ RUN pip install git+file://$PWD@$BBS_REVISION
 # Assume that we have Prodigy wheel there!
 RUN mkdir -p /bbs/tmp
 COPY /prodigy-1.10.0-cp36.cp37.cp38-cp36m.cp37m.cp38-linux_x86_64.whl /bbs/tmp
-RUN pip install /bbs/tmp/prodigy-1.10.4-cp36.cp37.cp38-cp36m.cp37m.cp38-linux_x86_64.whl
+RUN pip install /bbs/tmp/prodigy-1.10.0-cp36.cp37.cp38-cp36m.cp37m.cp38-linux_x86_64.whl
 
 # Install basis scispacy models
-RUN pip install /bbs/tmp/prodigy-1.10.0-cp36.cp37.cp38-cp36m.cp37m.cp38-linux_x86_64.whl
 RUN pip install https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.2.5/en_ner_jnlpba_md-0.2.5.tar.gz
 RUN pip install https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.2.5/en_ner_bionlp13cg_md-0.2.5.tar.gz
 RUN pip install https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.2.5/en_ner_bc5cdr_md-0.2.5.tar.gz
 
-# Jupyter
-RUN conda install -c conda-forge nodejs
-RUN jupyter labextension install @jupyter-widgets/jupyterlab-manager
-RUN jupyter labextension install @jupyterlab/toc
+RUN pip install uvicorn=0.11.5
+RUN pip install dvc==1.7.9
+RUN pip install spacy==2.3.0
+
 EXPOSE 8888
 
 RUN groupadd -g 999 docker
