--- a/data_and_models/pipelines/ner/dvc.yaml
+++ b/data_and_models/pipelines/ner/dvc.yaml
@@ -54,3 +54,129 @@ stages:
     - train.model5
     outs:
     - ../../models/ner/model5
+  eval_disease:
+    cmd: python eval.py --annotation_files ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl,../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
+      --model ../../models/ner/model1 --output_file ../../metrics/ner/disease.json
+      --etype DISEASE
+    deps:
+    - ../../Dockerfile-dvc
+    - ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl
+    - ../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
+    - ../../models/ner/model1
+    - eval.py
+    params:
+    - eval.DISEASE
+    metrics:
+    - ../../metrics/ner/disease.json
+  eval_cell_compartment:
+    cmd: python eval.py --annotation_files ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl,../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
+      --model ../../models/ner/model2 --output_file ../../metrics/ner/cell_compartment.json
+      --etype CELL_COMPARTMENT
+    deps:
+    - ../../Dockerfile-dvc
+    - ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl
+    - ../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
+    - ../../models/ner/model2
+    - eval.py
+    params:
+    - eval.CELL_COMPARTMENT
+    metrics:
+    - ../../metrics/ner/cell_compartment.json
+  eval_drug:
+    cmd: python eval.py --annotation_files ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl,../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
+      --model ../../models/ner/model2 --output_file ../../metrics/ner/drug.json --etype
+      DRUG
+    deps:
+    - ../../Dockerfile-dvc
+    - ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl
+    - ../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
+    - ../../models/ner/model2
+    - eval.py
+    params:
+    - eval.DRUG
+    metrics:
+    - ../../metrics/ner/drug.json
+  eval_organ:
+    cmd: python eval.py --annotation_files ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl,../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
+      --model ../../models/ner/model2 --output_file ../../metrics/ner/organ.json --etype
+      ORGAN
+    deps:
+    - ../../Dockerfile-dvc
+    - ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl
+    - ../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
+    - ../../models/ner/model2
+    - eval.py
+    params:
+    - eval.ORGAN
+    metrics:
+    - ../../metrics/ner/organ.json
+  eval_chemical:
+    cmd: python eval.py --annotation_files ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl,../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
+      --model ../../models/ner/model3 --output_file ../../metrics/ner/chemical.json
+      --etype CHEMICAL
+    deps:
+    - ../../Dockerfile-dvc
+    - ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl
+    - ../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
+    - ../../models/ner/model3
+    - eval.py
+    params:
+    - eval.CHEMICAL
+    metrics:
+    - ../../metrics/ner/chemical.json
+  eval_organism:
+    cmd: python eval.py --annotation_files ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl,../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
+      --model ../../models/ner/model3 --output_file ../../metrics/ner/organism.json
+      --etype ORGANISM
+    deps:
+    - ../../Dockerfile-dvc
+    - ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl
+    - ../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
+    - ../../models/ner/model3
+    - eval.py
+    params:
+    - eval.ORGANISM
+    metrics:
+    - ../../metrics/ner/organism.json
+  eval_cell_type:
+    cmd: python eval.py --annotation_files ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl,../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
+      --model ../../models/ner/model4 --output_file ../../metrics/ner/cell_type.json
+      --etype CELL_TYPE
+    deps:
+    - ../../Dockerfile-dvc
+    - ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl
+    - ../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
+    - ../../models/ner/model4
+    - eval.py
+    params:
+    - eval.CELL_TYPE
+    metrics:
+    - ../../metrics/ner/cell_type.json
+  eval_protein:
+    cmd: python eval.py --annotation_files ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl,../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
+      --model ../../models/ner/model4 --output_file ../../metrics/ner/protein.json
+      --etype PROTEIN
+    deps:
+    - ../../Dockerfile-dvc
+    - ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl
+    - ../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
+    - ../../models/ner/model4
+    - eval.py
+    params:
+    - eval.PROTEIN
+    metrics:
+    - ../../metrics/ner/protein.json
+  eval_pathway:
+    cmd: python eval.py --annotation_files ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl,../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
+      --model ../../models/ner/model5 --output_file ../../metrics/ner/pathway.json
+      --etype PATHWAY
+    deps:
+    - ../../Dockerfile-dvc
+    - ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl
+    - ../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
+    - ../../models/ner/model5
+    - eval.py
+    params:
+    - eval.PATHWAY
+    metrics:
+    - ../../metrics/ner/pathway.json
