Include Stan's feedback

--- a/data_and_models/Dockerfile-dvc
+++ b/data_and_models/Dockerfile-dvc
@@ -40,4 +40,4 @@ RUN useradd --create-home --uid 1000 --gid docker bbsuser
 
 WORKDIR /bbs
 RUN rm -rf /bbs/tmp
-ENTRYPOINT exec /bin/bash
+ENTRYPOINT ["/bin/bash"]
