[BBS-125] Setup ML data and model versioning with DVC (#129)
* Initialize dvc
* Add dvc data to raw_sentences + README
* Add README for annotations (still empty) dir
* Configure remote storage and set GPFS as default + config external/shared DVC cache
* Added annotations set for NER 1 to 13
* Add patterns.jsonl
* Add README for annotations
* Fix dirs naming
* Fix dirs naming / 2
* Remove shared cache setting from DVC shared config
* Update dvc configs for remote storage
* Add requirement for dvc[ssh]
* Fix error in args of ner.correct in ner/README.md
* Replace prodigy2df with annotations2df [wip]
* Fix tests
* Replace prodigy2df with annotations2df [done]
* Add Dockerfile for pipelines [wip]
* Add ner/eval.py [wip]
* Create a first dirty version of eval
* Add preliminary dvc.yaml
* Add new eval (4 separate files)
* Handle prodigy accepted samples w/o annotations
* fix misspell
* Add annotations for NER n. 14 and 15
* Add raw_sentences n 7 8 9 and pathway_patterns
* Update README files for patterns
* Attempt train.py
* Update train.py
* Add dvc pipelines for training model 1, 2, 3, 4, 5
* Add requirements
* add dockerfile
* fix spacy version in requirements
* Add Dockerfile + requirements as dependencies + re-run with correct output modelsgit add -u . 🎉
* Add etypes dicts for model 1, 2, 3, 4, 5
* restore dockerfile
* fix dockerfile
* Fix ORGANS label in annotations10
* fix bug in dockerfile (= instad of ==)
* Fix bug annotations2df + DVC eval stages complete!
* Update BBS version in Dockerfile
* Fix sha of Dockerfile
* Fix tests
* Modify docstring of annotations2df
* Fix flake8 and isort
* Check for pathlib
* Include Stan's feedback
* update m5s shas in dvc.lock after previous commit
* Move + rename DVC Dockerfile into pipeline/ner/
* Remove unnecessary requirements
* Run dvc repro to update shas

Co-authored-by: Stanislav Schmidt <stanislav.schmidt@epfl.ch>
Co-authored-by: Jan Krepl <jankrepl@yahoo.com>
Co-autho

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cryptography==3.0
 dash-cytoscape==0.0.5
 dash-table==4.6.2
 docker==4.2.2
+dvc[ssh]==1.7.9
 flake8==3.8.3
 git+https://github.com/allenai/scibert
 h5py==2.10.0
