Better Dockerfile, dockerignore, docker-compose (#103)

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,13 @@
-/sandbox
-/notebooks
-
+/.tox/
+/assets/
+/data/
+/docker/
+/docs/
+/htmlcov/
+/notebooks/
+/sandbox/
+/tests/
+*.egg-info/
+*.egg
+.env*
+!.env*.example
