--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ ipywidgets==7.5.1
 jupyter-dash==0.3.1
 jupyter-server-proxy==1.5.0
 jupyterlab==2.2.8
+langdetect==1.0.8
 matplotlib==3.3.2
 mysqlclient==2.0.1
 networkx==2.4
