Change init argument to model in SentenceTransformer

--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,7 @@ BBS_EMBEDDING_LOG_LEVEL=20
 BBS_EMBEDDING_LOG_FILE=bbs_embedding.log
 
 BBS_EMBEDDING_BSV_CHECKPOINT_PATH=assets/BioSentVec_PubMed_MIMICIII-bigram_d700.bin
+BBS_EMBEDDING_SENT2VEC_CHECKPOINT_PATH=assets/new_s2v_model.bin
 
 #------------------------------------------------------------------------------
 # Container - mining
