--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,7 @@ rdflib-jsonld==0.5.0
 requests==2.24.0
 responses==0.12.0
 scikit-learn==0.23.2
+scipy==1.5.2
 scispacy==0.2.5
 sent2vec-prebuilt>=0.0.2
 sentence-transformers==0.3.5
