--- a/data_and_models/pipelines/sentence_embedding/params.yaml
+++ b/data_and_models/pipelines/sentence_embedding/params.yaml
@@ -1,3 +1,11 @@
+train:
+  tf_idf:
+    init_kwargs:
+      lowercase: 1
+  count:
+    init_kwargs:
+      lowercase: 1
+
 eval:
   bsv:
     class: BSV
@@ -7,3 +15,11 @@ eval:
     class: SentTransformer
     init_kwargs:
       model_name: clagator/biobert_v1.1_pubmed_nli_sts
+  tf_idf:
+    class: SklearnVectorizer
+    init_kwargs:
+      checkpoint_model_path: ../../models/sentence_embedding/tf_idf/model.pkl
+  count:
+    class: SklearnVectorizer
+    init_kwargs:
+      checkpoint_model_path: ../../models/sentence_embedding/count/model.pkl
