Add dockerfile and complete train+eval for sklearn vectorizers

--- a/data_and_models/pipelines/sentence_embedding/dvc.yaml
+++ b/data_and_models/pipelines/sentence_embedding/dvc.yaml
@@ -4,6 +4,7 @@ stages:
       --model=biobert_nli_sts --output_dir=../../metrics/sentence_embedding
     deps:
     - ../../annotations/sentence_embedding/sentence_similarity_cord19.csv
+    - Dockerfile
     - eval.py
     params:
     - eval.biobert_nli_sts
@@ -17,7 +18,8 @@ stages:
       --model=bsv --output_dir=../../metrics/sentence_embedding
     deps:
     - ../../annotations/sentence_embedding/sentence_similarity_cord19.csv
-    - ../../models/sentence_embedding/bsv/BioSentVec_PubMed_MIMICIII-bigram_d700.bin
+    - ../../models/sentence_embedding/bsv
+    - Dockerfile
     - eval.py
     params:
     - eval.bsv
@@ -26,3 +28,55 @@ stages:
     - ../../metrics/sentence_embedding/bsv.png
     metrics:
     - ../../metrics/sentence_embedding/bsv.json
+  train_tf_idf:
+    cmd: python train.py --sentences_file=../../annotations/sentence_embedding/cord19_v47_sentences_pre.txt
+      --model=tf_idf --output_dir=../../models/sentence_embedding/tf_idf
+    deps:
+    - ../../annotations/sentence_embedding/cord19_v47_sentences_pre.txt
+    - Dockerfile
+    - train.py
+    params:
+    - train.tf_idf
+    outs:
+    - ../../models/sentence_embedding/tf_idf
+  eval_tf_idf:
+    cmd: python eval.py --annotation_files=../../annotations/sentence_embedding/sentence_similarity_cord19.csv
+      --model=tf_idf --output_dir=../../metrics/sentence_embedding
+    deps:
+    - ../../annotations/sentence_embedding/sentence_similarity_cord19.csv
+    - ../../models/sentence_embedding/tf_idf
+    - Dockerfile
+    - eval.py
+    params:
+    - eval.tf_idf
+    outs:
+    - ../../metrics/sentence_embedding/tf_idf.csv
+    - ../../metrics/sentence_embedding/tf_idf.png
+    metrics:
+    - ../../metrics/sentence_embedding/tf_idf.json
+  train_count:
+    cmd: python train.py --sentences_file=../../annotations/sentence_embedding/cord19_v47_sentences_pre.txt
+      --model=count --output_dir=../../models/sentence_embedding/count
+    deps:
+    - ../../annotations/sentence_embedding/cord19_v47_sentences_pre.txt
+    - Dockerfile
+    - train.py
+    params:
+    - train.count
+    outs:
+    - ../../models/sentence_embedding/count
+  eval_count:
+    cmd: python eval.py --annotation_files=../../annotations/sentence_embedding/sentence_similarity_cord19.csv
+      --model=count --output_dir=../../metrics/sentence_embedding
+    deps:
+    - ../../annotations/sentence_embedding/sentence_similarity_cord19.csv
+    - ../../models/sentence_embedding/count
+    - Dockerfile
+    - eval.py
+    params:
+    - eval.count
+    outs:
+    - ../../metrics/sentence_embedding/count.csv
+    - ../../metrics/sentence_embedding/count.png
+    metrics:
+    - ../../metrics/sentence_embedding/count.json
