Add use, sbert, sbiobert to eval

--- a/data_and_models/pipelines/sentence_embedding/params.yaml
+++ b/data_and_models/pipelines/sentence_embedding/params.yaml
@@ -23,3 +23,14 @@ eval:
     class: SklearnVectorizer
     init_kwargs:
       checkpoint_path: ../../models/sentence_embedding/count/model.pkl
+  use:
+    class: USE
+    init_kwargs:
+      use_version: 5
+  sbert:
+    class: SentTransformer
+    init_kwargs:
+      model_name: bert-base-nli-mean-tokens
+  sbiobert:
+    class: SBioBERT
+    init_kwargs: {}
