Address feedback of Emilie + Stan + Jan (but Pickle 🥒 gives non-deterministic shas??)

--- a/data_and_models/metrics/sentence_embedding/.gitignore
+++ b/data_and_models/metrics/sentence_embedding/.gitignore
@@ -10,3 +10,12 @@
 /count.json
 /count.csv
 /count.png
+/use.json
+/use.csv
+/use.png
+/sbert.json
+/sbert.csv
+/sbert.png
+/sbiobert.json
+/sbiobert.csv
+/sbiobert.png
