--- a/data_and_models/pipelines/sentence_embedding/dvc.yaml
+++ b/data_and_models/pipelines/sentence_embedding/dvc.yaml
@@ -80,3 +80,45 @@ stages:
     - ../../metrics/sentence_embedding/count.png
     metrics:
     - ../../metrics/sentence_embedding/count.json
+  eval_use:
+    cmd: python eval.py --annotation_files=../../annotations/sentence_embedding/sentence_similarity_cord19.csv
+      --model=use --output_dir=../../metrics/sentence_embedding
+    deps:
+    - ../../annotations/sentence_embedding/sentence_similarity_cord19.csv
+    - Dockerfile
+    - eval.py
+    params:
+    - eval.use
+    outs:
+    - ../../metrics/sentence_embedding/use.csv
+    - ../../metrics/sentence_embedding/use.png
+    metrics:
+    - ../../metrics/sentence_embedding/use.json
+  eval_sbert:
+    cmd: python eval.py --annotation_files=../../annotations/sentence_embedding/sentence_similarity_cord19.csv
+      --model=sbert --output_dir=../../metrics/sentence_embedding
+    deps:
+    - ../../annotations/sentence_embedding/sentence_similarity_cord19.csv
+    - Dockerfile
+    - eval.py
+    params:
+    - eval.sbert
+    outs:
+    - ../../metrics/sentence_embedding/sbert.csv
+    - ../../metrics/sentence_embedding/sbert.png
+    metrics:
+    - ../../metrics/sentence_embedding/sbert.json
+  eval_sbiobert:
+    cmd: python eval.py --annotation_files=../../annotations/sentence_embedding/sentence_similarity_cord19.csv
+      --model=sbiobert --output_dir=../../metrics/sentence_embedding
+    deps:
+    - ../../annotations/sentence_embedding/sentence_similarity_cord19.csv
+    - Dockerfile
+    - eval.py
+    params:
+    - eval.sbiobert
+    outs:
+    - ../../metrics/sentence_embedding/sbiobert.csv
+    - ../../metrics/sentence_embedding/sbiobert.png
+    metrics:
+    - ../../metrics/sentence_embedding/sbiobert.json
