Move patterns.jsonl to rule_based_patterns.jsonl

--- a/data_and_models/annotations/ner/.gitignore
+++ b/data_and_models/annotations/ner/.gitignore
@@ -13,3 +13,4 @@
 /annotations9_EmmanuelleLogette_2020-07-08_raw6_CelltypeProtein.jsonl
 /annotations14_EmmanuelleLogette_2020-09-02_raw8_CellCompartmentDrugOrgan.jsonl
 /annotations15_EmmanuelleLogette_2020-09-22_raw9_Pathway.jsonl
+/rule_based_patterns.jsonl
